# Awagent

./: .gitignore  README.md  TUTORIAL.md  config.example.toml  pyproject.toml
src/waagent/: __init__.py  __main__.py  awssso.py  cli.py  config.py  memory.py  net.py
src/waagent/agents/: registry.py
src/waagent/chat/: clipboard.py  repl.py  router.py  session.py  slash.py
src/waagent/report/: charts.py  pipeline.py  userrules.py
src/waagent/report/templates_builtin/: report.html.j2  report.md.j2
src/waagent/scan/: diff.py  models.py  runner.py  snapshot.py
src/waagent/scan/checks/: __init__.py  engine.py  rules_cost.py  rules_ops.py  rules_reliability.py  rules_security.py  rules_services.py
src/waagent/scan/collectors/: __init__.py  backup.py  base.py  cloudwatch.py  cost.py  dynamodb.py  ec2.py  elb.py  iam.py  lambda_.py  rds.py  s3.py  trusted_advisor.py
src/waagent/tools/: impl.py
src/waagent/wa/: pillars.py  watool.py
tests/: test_awssso.py  test_checks.py  test_diff_memory.py  test_digest_charts.py  test_extensions.py  test_report_pipeline.py  test_router.py  test_scan_extended.py  test_session_auth.py
