[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waagent"
version = "0.1.0"
description = "AWS Well-Architected AI agent powered by GitHub Copilot Enterprise"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "github-copilot-sdk",
    "boto3>=1.34",
    "typer>=0.12",
    "rich>=13.7",
    "prompt-toolkit>=3.0",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "platformdirs>=4.0",
    "tomlkit>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "moto[ec2,rds,s3,iam]>=5.0",
    "ruff>=0.4",
]

[project.scripts]
waagent = "waagent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/waagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
